--- a/exercise-1.html
+++ b/exercise-1.html
@@ -19,15 +19,43 @@
     -->
 
     <header class="container-fluid">
+      <div class="row">
+        <div class="red col-xs-9 col-sm-6 col-md-3 col-lg-3">
+        logo
+        </div>
 
+        <div class="purple col-xs-3 col-sm-6 col-md-9 col-lg-9">
+        nav
+        </div>
+      </div>
     </header>
 
     <main class="container-fluid">
+      <div class="row">
+        <div class="green col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="orange col-xs-12 col-sm-6 col-md-6 col-lg-6">
+          left-content
+          </div>
 
+          <div class="yellow col-xs-12 col-sm-6 col-md-6 col-lg-6">
+          right-content
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="container-fluid">
-
+      <div class="row">
+        <div class="blue col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        footer-left
+        </div>
+        <div class="red col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        footer-center
+        </div>
+        <div class="purple col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        footer-right
+        </div>
+      </div>
     </footer>
   </body>
 
