--- a/exercise-2.html
+++ b/exercise-2.html
@@ -5,11 +5,51 @@
     <title>Bootstrapper Exercise 2</title>
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- What are we missing here? -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   
   <body>
-    <!-- Get started here! -->
+    <header class="container-fluid">
+	    <div class="row">
+	    	<div class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">
+	    	header
+	    	</div>
+	    </div>
+    </header>
+
+    <main class="container-fluid">
+	    <div class="row">
+	    	<div class="orange col-xs-12 col-sm-6 col-md-3 col-lg-3">
+	    	main-1
+	    	</div>
+	    	<div class="blue col-xs-12 col-sm-6 col-md-3 col-lg-3">
+	    	main-2
+	    	</div>
+	    	<div class="yellow col-xs-12 col-sm-12 col-md-3 col-lg-3">
+	    	main-3
+	    	</div>
+	    </div>
+    </main>
+
+    <footer class="container-fluid">
+    	<div class="row">
+    		<div class="blue col-xs-6 col-sm-3 col-md-3 col-lg-3">
+    		footer-1
+    		</div>
+
+    		<div class="red col-xs-6 col-sm-3 col-md-3 col-lg-3">
+    		footer-2
+    		</div>
+
+    		<div class="purple col-xs-6 col-sm-3 col-md-3 col-lg-3">
+    		footer-3
+    		</div>
+
+    		<div class="purple col-xs-6 col-sm-3 col-md-3 col-lg-3">
+    		footer-4
+    		</div>
+    	</div>
   </body>
 
 </html>
