preparing to publish

--- a/exercise-1.html
+++ b/exercise-1.html
@@ -20,11 +20,11 @@
 
     <header class="container-fluid">
       <div class="row">
-        <div class="red col-xs-9 col-sm-6 col-md-3 col-lg-3">
+        <div class="red col-xs-8 col-sm-6 col-md-4 col-lg-4">
         logo
         </div>
 
-        <div class="purple col-xs-3 col-sm-6 col-md-9 col-lg-9">
+        <div class="purple col-xs-4 col-sm-6 col-md-8 col-lg-8">
         nav
         </div>
       </div>
@@ -32,13 +32,15 @@
 
     <main class="container-fluid">
       <div class="row">
-        <div class="green col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <div class="orange col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          left-content
-          </div>
+        <div class="green col-xs-12">
+          <div class="row">
+            <div class="orange col-xs-12 col-sm-6 col-lg-6">
+            left-content
+            </div>
 
-          <div class="yellow col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          right-content
+            <div class="yellow col-xs-12 col-sm-6 col-lg-6">
+            right-content
+            </div>
           </div>
         </div>
       </div>
@@ -46,13 +48,13 @@
 
     <footer class="container-fluid">
       <div class="row">
-        <div class="blue col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <div class="blue col-xs-12 col-sm-4 col-lg-4">
         footer-left
         </div>
-        <div class="red col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <div class="red col-xs-12 col-sm-4 col-lg-4">
         footer-center
         </div>
-        <div class="purple col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <div class="purple col-xs-12 col-sm-4 col-lg-4">
         footer-right
         </div>
       </div>
